# arion

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  Vagrantfile
cmake/Modules/: FindLibRaw.cmake
examples/: example-1.json  example-1.sh  example-2.json  example-3.json  example-4.json  example-5.json  examples.sh
patches/: add-png-support.patch  fix-cv-enum-name.patch  libexiv2-027-cmake-support.patch  no-resize-same-size.patch
src/: CMakeLists.txt  arion.cpp  arion.hpp  carion.cpp  carion.h  main.cpp
src/models/: copy.cpp  copy.hpp  fingerprint.cpp  fingerprint.hpp  operation.cpp  operation.hpp  read_meta.cpp  read_meta.hpp  readmeta.cpp  readmeta.hpp  resize.cpp  resize.hpp
src/utils/: utils.cpp  utils.hpp
tests/functional/: test.py
tests/images/: small_input.tif
